# FileSentinel

./: .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .env.example  Dockerfile  README.md  package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/endpoints/: analyze.py  health.py
apps/api/app/core/: config.py  security.py
apps/api/app/services/: magika_service.py
apps/api/filesentinel_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: .env.example  intlayer.config.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/scripts/: generate-locales.mjs
apps/web/src/: middleware.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
apps/web/src/app/[locale]/: layout.tsx  page.tsx
apps/web/src/app/[locale]/sign-in/: page.tsx
apps/web/src/app/api/analyze/: route.ts
apps/web/src/app/auth/error/: page.tsx
apps/web/src/components/: auth-buttons.tsx  locale-switcher.tsx  upload-card.tsx
apps/web/src/i18n/: generated-locales.ts  request.ts  routing.ts
apps/web/src/i18n/messages/: ar.json  de.json  en.json  es.json  fr.json  hi.json  pl.json  zh.json
apps/web/src/lib/: auth.ts
apps/web/src/types/: magika.ts
docs/: ARCHITECTURE.md
